--- a/docs/content/developer/iota-101/objects/object-ownership/wrapped.mdx
+++ b/docs/content/developer/iota-101/objects/object-ownership/wrapped.mdx
@@ -2,7 +2,9 @@
 title: Wrapped Objects
 ---
 
-In many programming languages, you organize data structures in layers by nesting complex data structures in another data structure. In Move, you can organize data structures by putting a field of `struct` type in another, like the following:
+In programming, nesting complex data structures within others is common for organizing information.
+Move allows you to structure data by embedding a `struct` type within another `struct`, which is known as wrapping.
+For example:
 
 ```move
 public struct Foo has key {
@@ -15,11 +17,10 @@ public struct Bar has store {
 }
 ```
 
-To embed a struct type in an object struct (with a `key` ability), the struct type must have the `store` ability.
+In this example, the `Foo` struct contains a `Bar` struct.
+While `Bar` is a regular struct, it isn't an object since it lacks the `key` ability.
 
-In the preceding example, `Bar` is a normal struct, but it is not an object since it doesn't have the `key` ability.
-
-The following code turns `Bar` into an object, which you can still wrap in `Foo`:
+To make `Bar` an object, you can modify its definition:
 
 ```move
 public struct Bar has key, store {
@@ -28,23 +29,45 @@ public struct Bar has key, store {
 }
 ```
 
-Now `Bar` is also an object type. If you put an object of type `Bar` into an object of type `Foo`, the object type `Foo` wraps the object type `Bar`. The object type `Foo` is the wrapper or wrapping object.
+Now, `Bar` is also an object type.
+When `Bar` is embedded in `Foo`, it becomes wrapped within `Foo`.
+The `Foo` object serves as the wrapper for the `Bar` object.
 
-There are some interesting consequences of wrapping an object into another. When an object is wrapped, the object no longer exists independently on-chain. You can no longer look up the object by its ID. The object becomes part of the data of the object that wraps it. Most importantly, you can no longer pass the wrapped object as an argument in any way in IOTA Move calls. The only access point is through the wrapping object.
+When an object is wrapped, it no longer exists independently on-chain.
+Its ID cannot be looked up, and it becomes part of the wrapping object's data.
+You cannot pass the wrapped object as an argument in any IOTA Move calls.
+The only way to interact with the wrapped object is through the wrapping object.
 
-It is not possible to create circular wrapping behavior, where A wraps B, B wraps C, and C also wraps A.
+Circular wrapping, where an object wraps another that eventually wraps back to the first, is not allowed.
 
-At some point, you can then take out the wrapped object and transfer it to an address, modify it, delete it, or freeze it. This is called **unwrapping**. When an object is **unwrapped**, it becomes an independent object again, and can be accessed directly on-chain. There is also an important property about wrapping and unwrapping: the object's ID stays the same across wrapping and unwrapping.
+## Unwrapping Objects
 
-There are a few ways to wrap an object into another object, and their use cases are typically different. This section describes three different ways to wrap an object with typical use cases.
+At some point, you may want to take out the wrapped object from its wrapper, making it independent again.
+This process is called **unwrapping**.
+When unwrapped, the object regains its status as an independent object on-chain, accessible via its original ID,
+which remains unchanged across the wrapping and unwrapping process.
 
-### Direct wrapping
+There are different ways to wrap objects, each with its own use case.
+Below are three methods of wrapping objects and their typical applications.
 
-If you put an object type directly as a field in another object type (as in the preceding example), it is called _direct wrapping_. The most important property achieved through direct wrapping is that the wrapped object cannot be unwrapped unless the wrapping object is destroyed. In the preceding example, to make `Bar` a standalone object again, unpack (and hence delete) the `Foo` object. Direct wrapping is the best way to implement object locking, which is to lock an object with constrained access. You can unlock it only through specific contract calls.
+## Direct Wrapping
 
-The following example implementation of a trusted swap demonstrates how to use direct wrapping. Assume there is an NFT-style `Object` type that has `scarcity` and `style`. In this example, `scarcity` determines how rare the object is (presumably the more scarce the higher its market value), and `style` determines the object content/type or how it's rendered. If you own some of these objects and want to trade your objects with others, you want to make sure it's a fair trade. You are willing to trade an object only with another one that has identical `scarcity`, but want a different `style` (so that you can collect more styles).
+Direct wrapping occurs when you place one object type as a field within another object type. The most crucial property of direct wrapping is that the wrapped object cannot be unwrapped unless the wrapping object is destroyed. For example, if you wrap a `Bar` object inside a `Foo` object, the only way to make `Bar` standalone again is to unpack (and thus delete) the `Foo` object.
 
-First, define such an object type:
+Direct wrapping is an effective way to implement object locking, where an object is locked with constrained access and can only be unlocked through specific contract calls.
+
+## Example: Trusted Swap
+
+The following example demonstrates how to use direct wrapping 
+to implement a [trusted swap](https://github.com/iotaledger/iota/tree/develop/examples/move/trusted_swap).
+Imagine an `Object` type with `scarcity` and `style` fields.
+Here, `scarcity` represents how rare the object is, and `style` defines its content or rendering.
+If you own such objects and wish to trade them with others,
+you'd want to ensure a fair trade—trading only with objects that have the same `scarcity` but different `style`.
+
+### Defining the Object Type
+
+Start by defining the `Object` type:
 
 ```move
 public struct Object has key, store {
@@ -54,20 +77,24 @@ public struct Object has key, store {
 }
 ```
 
-In a real application, you might make sure that there is a limited supply of the objects, and there is a mechanism to mint them to a list of owners. For simplicity and demonstration purposes, this example simplifies creation:
+In a real-world application,
+you would enforce a limited supply of these objects and implement a mechanism to mint them to a list of owners.
+For simplicity, the following example focuses on basic object creation:
 
 ```move
 public fun new(scarcity: u8, style: u8, ctx: &mut TxContext): Object {
     Object { id: object::new(ctx), scarcity, style }
 }
-
 ```
 
-You can also enable a swap/trade between your object and others' objects. For example, define a function that takes two objects from two addresses and swaps their ownership. But this doesn't work in IOTA. Only object owners can send a transaction to mutate the object. So one person cannot send a transaction that would swap their own object with someone else's object.
+### Enabling Object Swaps
 
-Another common solution is to send your object to a pool - such as an NFT marketplace or a staking pool - and perform the swap in the pool (either right away, or later when there is demand). Other chapters explore the concept of shared objects that can be mutated by anyone, and show how it enables anyone to operate in a shared object pool. This chapter focuses on how to achieve the same effect using owned objects. Transactions using only owned objects are faster and less expensive (in terms of gas) than using shared objects, since they do not require consensus in IOTA.
+To facilitate a swap between two objects, both objects must be owned by the same address.
+The process typically involves sending objects to a third party, such as a swapping service,
+which helps execute the swap and ensures the objects are returned to their appropriate owners.
+To retain custody of your objects during this process, direct wrapping is used.
 
-To swap objects, the same address must own both objects. Anyone who wants to swap their object can send their objects to the third party, such as a site that offers swapping services, and the third party helps perform the swap and send the objects to the appropriate owner. To ensure that you retain custody of your objects (such as coins and NFTs) and not give full custody to the third party, use direct wrapping. To define a wrapper object type:
+Define a wrapper object type called `SwapRequest`:
 
 ```move
 public struct SwapRequest has key {
@@ -78,7 +105,12 @@ public struct SwapRequest has key {
 }
 ```
 
-`SwapRequest` defines an object type, wraps the `object` to swap, and tracks the original `owner` of the object. You might need to also pay the third party some fee for this swap. To define an interface to request a swap by someone who owns an `Object`:
+`SwapRequest` wraps the `Object` to be swapped and records the original owner.
+A fee for the swap may also be included.
+
+### Requesting a Swap
+
+To request a swap, define a function that allows an `Object` owner to initiate the process:
 
 ```move
 public fun request_swap(
@@ -98,68 +130,66 @@ public fun request_swap(
 
     transfer::transfer(request, service)
 }
-
 ```
 
-In the preceding function, you must pass the object by value so that it's fully consumed and wrapped into `SwapRequest` to request swapping an `object`. The example also provides a fee (in the type of `Coin<IOTA>`) and checks that the fee is sufficient. The example turns `Coin` into `Balance` when it's put into the `wrapper` object. This is because `Coin` is an object type and used only to pass around as objects (such as transaction inputs or objects sent to addresses). For coin balances that need to be embedded in other structs, use `Balance` instead because to avoid the overhead of carrying around an unnecessary `UID` field.
+In this function, the `Object` is passed by value, fully consuming it and wrapping it into a `SwapRequest`.
+The wrapper object is then sent to the service operator.
+The example also uses [`coin::into_balance`](../../../../references/framework/iota-framework/coin.mdx#function-into_balance)
+to wrap the fee's [`Coin`](../../../../references/framework/iota-framework/coin.mdx) into a
+[`Balance`](../../../../references/framework/iota-framework/balance.mdx).
 
-The wrapper object is then sent to the service operator, with the address specified in the call as `service`.
+### Executing the Swap
 
-The function interface for the function that the service operator can call to perform a swap between two objects sent from two addresses resembles:
+The service operator can execute the swap between two `SwapRequest` objects using the following function:
 
 ```move
 public fun execute_swap(s1: SwapRequest, s2: SwapRequest): Balance<IOTA>;
 ```
 
-Where `s1` and `s2` are two wrapped objects that were sent from different object owners to the service operator. Both wrapped objects are passed by value because they eventually need to be [unpacked](https://move-book.com/advanced-topics/struct.html#destructing-structures).
-
-First, unpack the two object to obtain the inner fields:
+First, unpack the `SwapRequest` objects to retrieve the inner fields:
 
 ```move
 let SwapRequest {id: id1, owner: owner1, object: o1, fee: fee1} = s1;
 let SwapRequest {id: id2, owner: owner2, object: o2, fee: fee2} = s2;
 ```
 
-Then, check that the swap is legitimate (the two objects have identical scarcity and different styles):
+Next, verify that the swap is legitimate by ensuring the two objects have identical `scarcity` but different `style`:
 
 ```move
 assert!(o1.scarcity == o2.scarcity, EBadSwap);
 assert!(o1.style != o2.style, EBadSwap);
 ```
 
-To perform the actual swap:
+Perform the swap by transferring the objects to their new owners:
 
 ```move
 transfer::transfer(o1, owner2);
 transfer::transfer(o2, owner1);
 ```
 
-The preceding code sends `o1` to the original owner of `o2`, and sends `o2` to the original owner of `o1`. The service can then delete the wrapping `SwapRequest` objects:
+Finally, delete the wrapping `SwapRequest` objects and return the combined fees to the service provider:
 
 ```move
 object::delete(id1);
 object::delete(id2);
 ```
 
-Finally, the service merges together the `fee1` and `fee2`, and returns it.  The service provider can then turn it into a coin, or merge it into some larger pool where it collects all fees:
+Finally, the service merges `fee1` and `fee2`, and returns it:
 
 ```move
 balance::join(&mut fee1, fee2);
 fee1
 ```
 
-After this call, the two objects are swapped and the service provider takes the service fee.
+## Wrapping with `Option`
 
-Since the contract defined only one way to deal with `SwapRequest` - `execute_swap` - there is no other way the service operator can interact with `SwapRequest` despite its ownership.
+In some cases, direct wrapping might be too rigid.
+For example, you might want an object type that can optionally contain another object, which can be replaced later.
+This flexibility can be achieved using [`Option`](../../../../references/framework/move-stdlib/option.mdx).
 
-Find the full source code in the [trusted_swap](https://github.com/iotaledger/iota/blob/main/examples/move/trusted_swap) example.
-
-
-### Wrapping through `Option`
-
-When object type `Bar` is directly wrapped into `Foo`, there is not much flexibility: a `Foo` object must have a `Bar` object in it, and to take out the `Bar` object you must destroy the `Foo` object. However, for more flexibility, the wrapping type might not always have the wrapped object in it, and the wrapped object might be replaced with a different object at some point.
-
-To demonstrate this use case, design a simple game character: A warrior with a sword and shield. A warrior might have a sword and shield, or might not have either. The warrior should be able to add a sword and shield, and replace the current ones at any time. To design this, define a `SimpleWarrior` type:
+Consider a simple game character—a warrior with a sword and shield.
+The warrior might not always have these items, and they should be able to equip or replace them as needed.
+Define the `SimpleWarrior` type:
 
 ```move
 public struct SimpleWarrior has key {
@@ -169,7 +199,7 @@ public struct SimpleWarrior has key {
 }
 ```
 
-Each `SimpleWarrior` type has an optional `sword` and `shield` wrapped in it, defined as:
+Each `SimpleWarrior` has an optional `sword` and `shield`:
 
 ```move
 public struct Sword has key, store {
@@ -183,7 +213,7 @@ public struct Shield has key, store {
 }
 ```
 
-When you create a new warrior, set the `sword` and `shield` to `none` to indicate there is no equipment yet:
+When creating a new warrior, initialize the `sword` and `shield` to `none`:
 
 ```move
 public fun create_warrior(ctx: &mut TxContext) {
@@ -195,8 +225,7 @@ public fun create_warrior(ctx: &mut TxContext) {
     transfer::transfer(warrior, tx_context::sender(ctx))
 }
 ```
-
-You can then define functions to equip new swords or new shields:
+You can then define a function to equip new swords or new shields:
 
 ```move
 public fun equip_sword(warrior: &mut SimpleWarrior, sword: Sword, ctx: &mut TxContext) {
@@ -208,19 +237,22 @@ public fun equip_sword(warrior: &mut SimpleWarrior, sword: Sword, ctx: &mut TxCo
 }
 ```
 
-The function in the preceding example passes a `warrior` as a mutable reference of `SimpleWarrior`, and passes a `sword` by value to wrap it into the `warrior`.
+The function passes a `warrior` as a mutable reference of `SimpleWarrior`,
+and passes a `sword` by value to wrap it into the `warrior`.
 
-Note that because `Sword` is an object type without `drop` ability, if the warrior already has a sword equipped, the warrior can't drop that sword. If you call `option::fill` without first checking and taking out the existing sword, an error occurs. In `equip_sword`, first check whether there is already a sword equipped. If so, remove it out and send it back to the sender. To a player, this returns an equipped sword to their inventory when they equip the new sword.
+Since `Sword` is an object type without `drop` ability,
+the warrior can't drop that sword if he's already equipped another.
+If you call [`option::fill`](../../../../references/framework/move-stdlib/option.mdx#function-fill) without checking and taking out the existing sword,
+an error will occur.
+Therefore, `equip_sword` should start by checking whether there is already a sword equipped. If so, remove it out and send it back to the sender, in this case, the player's inventory.
 
-Find the source code in the [simple_warrior](https://github.com/iotaledger/iota/tree/develop/examples/move/simple_warrior) example.
+## Wrapping with `vector`
 
-To view a more complex example, see [hero](https://github.com/iotaledger/iota/tree/develop/examples/move/hero).
+Another approach is wrapping objects in a [`vector`](../../../../references/framework/move-stdlib/vector.mdx),
+allowing the container object to hold multiple instances of the wrapped type.
+This approach is useful when an object needs to manage a dynamic collection of other objects.
 
-### Wrapping through `vector`
-
-The concept of wrapping objects in a vector field of another object is very similar to wrapping through `Option`: an object can contain 0, 1, or many of the wrapped objects of the same type.
-
-Wrapping through vector resembles:
+Define a `Farm` object that wraps a `vector` of `Pet` objects:
 
 ```move
 public struct Pet has key, store {
@@ -234,4 +266,4 @@ public struct Farm has key {
 }
 ```
 
-The preceding example wraps a vector of `Pet` in `Farm`, and can be accessed only through the `Farm` object.
+The `Farm` object can now contain a collection of `Pet` objects, which can only be accessed through the `Farm`.
